--- a/ScientificCalculator/nbproject/project.properties
+++ b/ScientificCalculator/nbproject/project.properties
@@ -21,8 +21,12 @@ compile.on.save.unsupported.javafx=true
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/ScientificCalculator.jar
@@ -33,8 +37,7 @@ includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
-javac.classpath=\
-    ${javafx.classpath.extension}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -65,10 +68,6 @@ javadoc.version=false
 javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
-javafx.classpath.extension=\
-    ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
-    ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
-    ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
@@ -107,7 +106,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
